--- a/index.html
+++ b/index.html
@@ -1,5 +1,27 @@
 <!-- TODO 1: Create the HTML Boilerplate -->
+ <!DOCTYPE html>
+ <html lang="en">
+ <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Dorothy-Web Developer</title>
+ </head>
+ <body>
+    <h1>Dorothy's Portfolio</h1>
+ <h2>I'm a Web Developer</h2>
+ <hr/>
+ <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
+   <img src="./assets/images/movies.JPG" alt="Best movies by Dorothy" height="200"><br/><br/>
 
+ <h3><a href="./public/birthday-invite.html">Birthday invite Project</a></h3>
+   <img src="./assets/images/Birthday.JPG" alt="Birthday invite" height="200"><br/><br/>
+
+   <a href="./public/about.html">About Me</a>
+ <a href="./public/contact.html">Contact Me</a>
+    
+ </body>
+ </html>
+ 
 <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
 
 <!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
@@ -13,3 +35,4 @@ HINT for TODO 6: You can use the height attribute set to 200 to make the image s
 https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
 
 <!-- TODO 7: Add the Contact Me and About Me page links -->
+ 
